src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Church_Contact_Consent__c</fullName>
        <inlineHelpText>I hereby give consent for the site church to use the address on this form to send correspondence regarding church events.</inlineHelpText>
        <label>Church Contact Consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact1__c</fullName>
        <label>Emergency Contact 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Address__c</fullName>
        <label>Emergency Contact 1 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Email__c</fullName>
        <label>Emergency Contact 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Mobile_Phone__c</fullName>
        <label>Emergency Contact 1 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Relation__c</fullName>
        <label>Emergency Contact 1 Relation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Work_Phone__c</fullName>
        <label>Emergency Contact 1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Address__c</fullName>
        <label>Emergency Contact 2 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Email__c</fullName>
        <label>Emergency Contact 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Mobile_Phone__c</fullName>
        <label>Emergency Contact 2 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Relation__c</fullName>
        <label>Emergency Contact 2 Relation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Work_Phone__c</fullName>
        <label>Emergency Contact 2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2__c</fullName>
        <label>Emergency Contact 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Treatment__c</fullName>
        <label>Emergency Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Trips__c</fullName>
        <label>Field Trips</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Allergies__c</fullName>
        <label>Food Allergies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Allergy_Details__c</fullName>
        <label>Food Allergy Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Govt_Assistance_Qualified__c</fullName>
        <label>Govt Assistance Qualified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthy_Habits__c</fullName>
        <label>Healthy Habits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Monthly_Income__c</fullName>
        <label>Household Monthly Income</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leave_School__c</fullName>
        <label>Leave School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pick-up</fullName>
                </value>
                <value>
                    <fullName>Walk Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Info__c</fullName>
        <label>Medical Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medicine_Allergies__c</fullName>
        <label>Medicine Allergies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicine_Allergy_Details__c</fullName>
        <label>Medicine Allergy Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_members_in_household__c</fullName>
        <label>Number of members in household</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTDID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>PTDID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PT_Not_State_Licensed__c</fullName>
        <label>PT Not State Licensed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Email__c</fullName>
        <label>Parent/Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_First_Name__c</fullName>
        <label>Parent/Guardian First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Last_Name__c</fullName>
        <label>Parent/Guardian Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Phone__c</fullName>
        <label>Parent/Guardian Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Work_Phone__c</fullName>
        <label>Parent/Guardian Work Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Age_Group__c</fullName>
        <label>Participant Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-11</fullName>
                </value>
                <value>
                    <fullName>12-15</fullName>
                </value>
                <value>
                    <fullName>16-18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture_Name__c</fullName>
        <label>Picture/Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policies_Affirmed__c</fullName>
        <label>Policies Affirmed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Two or More Races</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reading_Program__c</fullName>
        <label>Reading Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Fee_Paid__c</fullName>
        <label>Registration Fee Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Full $20</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_authorized_adults__c</fullName>
        <label>Release authorized adults</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <label>School District</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Water_Activities__c</fullName>
        <label>Water Activities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Participant</fullName>
        <active>true</active>
        <label>Participant</label>
    </recordTypes>
</CustomObject>